--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
     "expo": "54.0.20",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
