--- a/app.json
+++ b/app.json
@@ -55,7 +55,8 @@
             }
           }
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
