--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "54.0.20",
+    "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
@@ -36,14 +36,14 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
