--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@rn-primitives/aspect-ratio": "^1.2.0",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/separator": "^1.2.0",
@@ -41,6 +42,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.9",
+    "lucide-react-native": "^0.552.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
