--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/aspect-ratio": "^1.2.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
@@ -26,6 +27,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
