--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
