--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "54.0.22",
+    "expo": "54.0.23",
     "expo-auth-session": "~7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
@@ -40,6 +41,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-navigation-bar": "~5.0.9",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
